# Open_Source_Software_Project

./: .gitignore  README.md  package.json  pnpm-lock.yaml
backend/: .requirements-sha256  AGENT.md  README.md  pyproject.toml
backend/agent_summary/: AGENT.md  llm_client.py  router.py  service.py  test_api_summary.py
backend/agent_summary/agent/: summary_agent.py
backend/agent_summary/analysis/: analyzer.py  chunker.py  strategies.py
backend/agent_summary/core/: hooks.py  router.py  state.py  tracer.py
backend/agent_summary/steps/: analyze.py  base.py  evaluate.py  search.py  summarize.py  translate.py
backend/agent_summary/tests/: conftest.py
backend/agent_summary/tools/: base.py
backend/agent_translation/: AGENT.md  __init__.py  agent.py  router.py  service.py
backend/agent_translation/http/: __init__.py  router.py
backend/agent_translation/tests/: test_agent_resilience.py
backend/app/: config.py  lifespan.py  main.py
backend/app/routers/: providers.py
backend/app/schemas/: __init__.py  agent.py  common.py  digest.py  entry.py  feed.py  provider.py  tag.py  usage.py
backend/backend/.venv-sidecar/: pyvenv.cfg
backend/content_cleaner/: AGENT.md  README.md  __init__.py  router.py  schemas.py  service.py
backend/db/: AGENT.md  README.md  __init__.py
backend/feed_engine/: AGENT.md  fetcher.py  router.py  service.py
backend/llm_providers/: AGENT.md
backend/scripts/: build_sidecar.py
backend/tests/: test_article_repo.py  test_content_cleaner.py  test_cross_module_regressions.py  test_feed_engine.py  test_feed_repo.py  test_healthz.py
docs/: team.md  (+5 more)
(+24 files in other folders)
